fix(module): community更新
完善community模块，比赛，临帖模块

--- a/module_character/src/main/res/layout/fragment_character.xml
+++ b/module_character/src/main/res/layout/fragment_character.xml
@@ -51,7 +51,53 @@
                 android:textColor="@color/black" />
         </androidx.cardview.widget.CardView>
 
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/toolbar_two"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginTop="90dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="0dp">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_match"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="比赛"
+                android:textColor="@color/black" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="0dp">
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="临帖"
+                android:textColor="@color/black" />
+        </androidx.cardview.widget.CardView>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <com.google.android.material.chip.Chip
@@ -66,7 +112,7 @@
         app:closeIcon="@drawable/ic_right"
         app:closeIconEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_two" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/carousel_recycler_view_history"
