--- a/module_character/src/main/res/navigation/character_graph.xml
+++ b/module_character/src/main/res/navigation/character_graph.xml
@@ -20,6 +20,12 @@
         <action
             android:id="@+id/action_characterFragment_to_enterViewFragment"
             app:destination="@id/enterViewFragment" />
+        <action
+            android:id="@+id/action_characterFragment_to_matchFragment"
+            app:destination="@id/matchFragment" />
+        <action
+            android:id="@+id/action_characterFragment_to_recommendFragment"
+            app:destination="@id/recommendFragment" />
     </fragment>
     <fragment
         android:id="@+id/scoreFragment"
@@ -45,4 +51,12 @@
         android:id="@+id/enterViewFragment"
         android:name="com.example.module_character.ui.EnterViewFragment"
         android:label="EnterViewFragment" />
+    <fragment
+        android:id="@+id/matchFragment"
+        android:name="com.example.module_character.ui.MatchFragment"
+        android:label="MatchFragment" />
+    <fragment
+        android:id="@+id/recommendFragment"
+        android:name="com.example.module_character.ui.RecommendFragment"
+        android:label="RecommendFragment" />
 </navigation>
