fix(project): 添加功能
添加文字识别功能，修改home的界面ui

--- a/module_mine/src/main/res/layout/fragment_follow.xml
+++ b/module_mine/src/main/res/layout/fragment_follow.xml
@@ -27,9 +27,9 @@
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:layout_marginTop="16dp"
-            android:text="粉丝"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="20dp"
+            android:text="关注"
             android:textSize="18dp"
             app:layout_constraintStart_toEndOf="@+id/chip"
             app:layout_constraintTop_toTopOf="parent" />
