--- a/common/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/common/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+  <group
+      android:scaleX="0.63"
+      android:scaleY="0.63"
+      android:translateX="189.44"
+      android:translateY="189.44">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#FF000000"
+        android:pathData="M514.5,207.4c2.1,-20.1 3.3,-40.5 3.6,-61c0.3,-20.5 4.7,-41.2 13,-62c6.3,-4.9 13.9,-9.7 22.9,-14.6c9,-4.9 17.4,-7.6 25,-8.3c23.6,10.4 37.5,23.4 41.7,39.1c4.2,15.6 4.2,33.2 0,52.6c-0.7,12.5 1.2,22.6 5.7,30.2c4.5,7.7 14.4,10.1 29.7,7.3c20.1,-5.6 41.7,-4.3 64.6,3.6c22.9,8 38.2,24.8 45.9,50.5c0.7,7 3.6,10.6 8.9,10.9c5.2,0.4 11.3,0.9 18.2,1.6c12.5,-4.9 24.6,-7.6 36.5,-8.3c11.8,-0.7 25.4,-1.4 40.6,-2.1c17.4,4.2 27.1,11.3 29.2,21.4c2.1,10.1 -6.3,18.2 -25,24.5c-11.8,-0.7 -22.8,0.2 -32.8,2.6c-10.1,2.4 -20.7,5.7 -31.8,9.9c-16.7,0 -34.6,2.3 -53.7,6.8c-19.1,4.5 -35.3,16.2 -48.5,34.9c-4.9,7 -6.3,12.3 -4.2,16.2c2.1,3.8 6.9,6.1 14.6,6.8l27.1,0c15.3,2.8 24,9 26.1,18.8c2.1,9.7 -3.8,19.5 -17.7,29.2c-18.8,3.5 -36.3,5.9 -52.6,7.3c-16.3,1.4 -33.5,4.5 -51.6,9.4c-11.8,2.1 -19.5,9 -22.9,20.8c-3.5,11.8 -1.4,20.8 6.3,27.1l39.6,-6.3c13.9,0 23.1,4.2 27.6,12.5c4.5,8.3 -0.5,17.4 -15.1,27.1l-60.4,20.8c-12.5,7 -18.8,14.8 -18.8,23.4c0,8.7 6.9,12 20.8,9.9l35.4,-6.3c24.3,-6.9 47.6,-13.4 69.8,-19.3c22.2,-5.9 44.8,-9.2 67.7,-9.9c14.6,2.1 23.8,8 27.6,17.7c3.8,9.7 -1.9,17 -17.2,21.9c-30.6,3.5 -59.9,9.6 -88.1,18.2c-28.1,8.7 -57.8,16.5 -89.1,23.4c-16.7,2.1 -29,7.5 -37,16.2c-8,8.7 -18.6,18.6 -31.8,29.7c-4.2,6.3 -5.4,10.6 -3.6,13c1.7,2.4 5.7,3.6 12,3.6c24.3,-5.6 47.8,-10.2 70.3,-14.1c22.6,-3.8 46.4,-7.5 71.4,-10.9c38.9,0 66.3,12.2 82.3,36.5c16,24.3 21.2,54.5 15.6,90.7l-22.9,58.4c-9,17.4 -17.4,33.9 -25,49.5c-7.7,15.6 -16.7,32.5 -27.1,50.5c-8.3,4.2 -15.5,6.1 -21.4,5.7c-5.9,-0.4 -12,1.2 -18.2,4.7c-6.3,2.8 -11.3,4.9 -15.1,6.3c-3.8,1.4 -7.8,0.7 -12,-2.1l-10.4,-8.3c-25,-9.7 -50.9,-14.4 -77.6,-14.1c-26.8,0.3 -53,5 -78.7,14.1l-20.8,8.3c-27.8,11.1 -51.6,8.7 -71.4,-7.3c-19.8,-16 -40.5,-38.6 -62,-67.7c-13.2,-27.8 -15.8,-58.9 -7.8,-93.3c8,-34.4 28.7,-59.6 62,-75.6c11.1,-5.6 22.7,-12.3 34.9,-20.3c12.1,-8 23.4,-17.2 33.9,-27.6l-8.3,-2.1c-27.8,8.3 -53.8,16.1 -78.2,23.4c-24.3,7.3 -51.1,14.8 -80.2,22.4c-13.9,6.3 -31.3,12.2 -52.1,17.7c-20.8,5.6 -35.4,2.4 -43.8,-9.4c0,-9.7 6.3,-19.1 18.8,-28.1c12.5,-9 23.6,-14.2 33.3,-15.6c34,-1.4 67.2,-6.9 99.5,-16.7c32.3,-9.7 66.5,-20.8 102.6,-33.3c7.6,-4.9 11.3,-9.4 10.9,-13.5c-0.4,-4.2 -4.7,-8 -13,-11.5c-15.3,-4.2 -30.4,-4.5 -45.3,-1c-14.9,3.5 -30.4,6.6 -46.4,9.4c-18.1,2.8 -29.2,-2.2 -33.3,-15.1c-4.2,-12.8 3.5,-22.4 22.9,-28.7c20.1,-0.7 39.1,-3.3 56.8,-7.8c17.7,-4.5 37.7,-10.2 59.9,-17.2c4.2,-2.8 7.6,-6.6 10.4,-11.5c2.8,-4.9 4.2,-8.7 4.2,-11.5c0.7,-11.1 -0.2,-18.9 -2.6,-23.4c-2.4,-4.5 -8.5,-5 -18.2,-1.6c-14.6,6.3 -29.4,11.6 -44.3,16.2c-14.9,4.5 -29.4,7.5 -43.2,8.9c-15.3,-4.2 -24.1,-11.1 -26.6,-20.8c-2.4,-9.7 4.3,-18.8 20.3,-27.1c18.8,-1.4 36,-4 51.6,-7.8c15.6,-3.8 33.2,-9.5 52.6,-17.2c9,-2.8 14.9,-7.6 17.7,-14.6c2.8,-6.9 3.8,-13.9 3.1,-20.8c0.7,-9.7 -1.2,-14.6 -5.7,-14.6c-4.5,0 -9.6,0.7 -15.1,2.1c-16.7,4.2 -32.1,8.2 -46.4,12c-14.2,3.8 -30.1,11.6 -47.4,23.4c-33.3,13.2 -64.4,24 -93.3,32.3c-28.8,8.3 -58.9,19.1 -90.1,32.3c-4.9,1.4 -9.7,2.4 -14.6,3.1c-4.9,0.7 -9,1 -12.5,1c-16,-0.7 -29.2,-4.2 -39.6,-10.4c-10.4,-6.3 -14.6,-18.1 -12.5,-35.4c5.6,-14.6 14.6,-27.3 27.1,-38c12.5,-10.8 25.7,-12.7 39.6,-5.7c7.6,3.5 15.6,4.9 24,4.2c8.3,-0.7 17,-2.1 26.1,-4.2c43.8,-9 85.3,-19.6 124.5,-31.8c39.2,-12.1 81.1,-25.2 125.6,-39.1c9.7,-5.6 14.6,-12 14.6,-19.3c0,-7.3 -4.9,-10.6 -14.6,-9.9c-13.9,0 -26.8,-0.9 -38.6,-2.6c-11.8,-1.7 -23.3,-1.6 -34.4,0.5c-9,0 -16.9,-1.6 -23.4,-4.7c-6.6,-3.1 -14.1,-7.8 -22.4,-14.1c-9,-4.2 -13,-9 -12,-14.6c1,-5.6 5.7,-10.4 14.1,-14.6c13.9,-8.3 27.1,-13.9 39.6,-16.7c12.5,-2.8 26.4,-4.2 41.7,-4.2c9,-0.7 19.4,-2.8 31.3,-6.3C499.2,224.8 508.3,217.8 514.5,207.4ZM708.3,684.6c-43.1,7.7 -83.7,17 -121.9,28.1c-38.2,11.1 -80.2,30.9 -126.1,59.4c-18.1,12.5 -26.9,22.4 -26.6,29.7c0.3,7.3 4.3,18.9 12,34.9c1.4,5.6 3.1,12.3 5.2,20.3c2.1,8 6.6,13.7 13.5,17.2c6.9,2.1 14.1,-0.4 21.4,-7.3c7.3,-7 14.8,-14.2 22.4,-21.9c4.2,-8.3 4.3,-13.2 0.5,-14.6c-3.8,-1.4 -8.9,-3.5 -15.1,-6.3c-7.7,-4.9 -14.2,-10.2 -19.8,-16.2c-5.6,-5.9 -2.4,-10.2 9.4,-13c22.2,-9 45.5,-17.4 69.8,-25c24.3,-7.6 48.3,-9 71.9,-4.2c9,5.6 14.8,11.1 17.2,16.7c2.4,5.6 -1.2,11.1 -10.9,16.7c-16,8.3 -31.3,17.9 -45.9,28.7c-14.6,10.8 -29.9,22.7 -45.8,36c-4.2,3.5 -6.4,6.4 -6.8,8.9c-0.4,2.4 1.9,4.3 6.8,5.7c13.2,-4.2 26.2,-7.7 39.1,-10.4c12.8,-2.8 26.2,-7.7 40.1,-14.6c2.1,-2.8 2.8,-6.4 2.1,-10.9c-0.7,-4.5 0.7,-8.5 4.2,-12c4.2,-2.8 9.7,-4.2 16.7,-4.2c6.9,0 13.2,0.7 18.8,2.1c11.8,1.4 20.3,0.9 25.5,-1.6c5.2,-2.4 11.3,-10.2 18.2,-23.4c6.3,-16.7 13.7,-39.8 22.4,-69.3C735.3,704.6 729.2,688.1 708.3,684.6ZM499.9,680.5c-6.3,0.7 -13.2,4.2 -20.8,10.4c-7.7,6.3 -9,11.8 -4.2,16.7c7.6,-0.7 16.5,-3.8 26.6,-9.4C511.5,692.6 511,686.7 499.9,680.5ZM679.2,240.7c-13.2,-2.1 -24.5,-0.5 -33.9,4.7c-9.4,5.2 -14.1,15.5 -14.1,30.7c9,14.6 20.5,16.2 34.4,4.7C679.5,269.4 684,256 679.2,240.7Z" />
+  </group>
 </vector>
