--- a/module_character/src/main/res/layout/fragment_character.xml
+++ b/module_character/src/main/res/layout/fragment_character.xml
@@ -5,122 +5,176 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/toolbar"
+    <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="180dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:scaleType="centerCrop"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            app:cardCornerRadius="16dp"
-            app:cardElevation="0dp">
+            android:src="@drawable/ic_background" />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/textView_score"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:text="评分"
+                android:textSize="12dp"
                 android:background="@android:color/transparent"
                 android:gravity="center"
-                android:text="智能评分"
+                app:icon="@drawable/take_photo"
+                app:iconGravity="top"
+                app:iconTint="@color/black"
                 android:textColor="@color/black" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
-            app:cardCornerRadius="16dp"
-            app:cardElevation="0dp">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/textView_character"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:gravity="center"
                 android:text="集字"
-                android:textColor="@color/black" />
-        </androidx.cardview.widget.CardView>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/toolbar_two"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="90dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            app:cardCornerRadius="16dp"
-            app:cardElevation="0dp">
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                app:icon="@drawable/collect_character"
+                app:iconGravity="top"
+                app:iconTint="@color/black" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_match"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:gravity="center"
                 android:text="比赛"
-                android:textColor="@color/black" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
-            app:cardCornerRadius="16dp"
-            app:cardElevation="0dp">
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                app:icon="@drawable/macth"
+                app:iconGravity="top"
+                app:iconTint="@color/black" />
 
             <com.google.android.material.button.MaterialButton
-                 android:id="@+id/btn_check_in"
-                android:layout_width="match_parent"
+                android:id="@+id/btn_check_in"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="打卡"
+                android:textSize="12dp"
+                app:icon="@drawable/check_in"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:gravity="center"
-                android:text="打卡"
+                app:iconGravity="top"
+                app:iconTint="@color/black"
                 android:textColor="@color/black" />
-        </androidx.cardview.widget.CardView>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <com.google.android.material.chip.Chip
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+
+                android:id="@+id/button_recognise"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="拍照识字"
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                app:icon="@drawable/recognise_character"
+                app:iconGravity="top"
+                app:iconTint="@color/black" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="待定"
+                android:textColor="@color/black"
+                android:textSize="12dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="待定"
+                android:textColor="@color/black"
+                android:textSize="12dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="待定"
+                android:textColor="@color/black"
+                android:textSize="12dp" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <View
+            android:id="@+id/view_back"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/shape_circle" />
+
+    </FrameLayout>
+
+    <com.youth.banner.Banner
+        android:id="@+id/banner"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        android:layout_margin="16dp"
+        app:banner_radius="16dp"
+
+        app:layout_constraintBottom_toTopOf="@+id/chip_smart_score"
+        app:layout_constraintTop_toBottomOf="@id/frameLayout"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/chip_smart_score"
-        style="@style/Widget.MaterialComponents.Chip.Choice"
+        style="?attr/materialIconButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="132dp"
         android:text="历史评分"
-        app:chipBackgroundColor="@android:color/transparent"
-        app:closeIcon="@drawable/ic_right"
-        app:closeIconEnabled="true"
+        app:icon="@drawable/right"
+        app:iconGravity="end"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_two" />
+        app:layout_constraintTop_toBottomOf="@id/frameLayout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/carousel_recycler_view_history"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="16dp"
+        android:layout_height="180dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="16dp"
         android:clickable="true"
         app:layout_constraintTop_toBottomOf="@+id/chip_smart_score"
         tools:layout_editor_absoluteX="16dp" />
@@ -138,27 +192,57 @@
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/chip_smart_score" />
 
-    <com.google.android.material.chip.Chip
-        android:id="@+id/chip_recommond"
-        style="@style/Widget.MaterialComponents.Chip.Choice"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_sentence"
+        style="?attr/materialIconButtonStyle"
         android:layout_width="wrap_content"
+        android:text="每日一句"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="推荐"
-        app:chipBackgroundColor="@android:color/transparent"
-        app:closeIcon="@drawable/ic_right"
-        app:closeIconEnabled="true"
+        app:icon="@drawable/right"
+        app:iconGravity="end"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/carousel_recycler_view_history" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/carousel_recycler_view_recommond"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="16dp"
-        android:layout_marginTop="272dp"
-        android:clickable="true"
-        app:layout_constraintTop_toBottomOf="@id/chip_recommond"
-        tools:layout_editor_absoluteX="36dp" />
+        android:layout_height="0dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        app:cardCornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_sentence">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/ic_background"
+            android:padding="12dp">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textview_sentence"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:fontFamily="@font/lishu"
+                android:gravity="center"
+                android:text="不要轻易的口出狂言，那样只会透露出你的软弱。"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                app:layout_constraintBottom_toTopOf="@+id/button_other_one"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_other_one"
+                style="?attr/materialIconButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/other_one"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
