--- a/module_character/src/main/res/navigation/character_graph.xml
+++ b/module_character/src/main/res/navigation/character_graph.xml
@@ -21,15 +21,15 @@
             android:id="@+id/action_characterFragment_to_matchFragment"
             app:destination="@id/matchFragment" />
         <action
-            android:id="@+id/action_characterFragment_to_recommendFragment"
-            app:destination="@id/recommendFragment" />
-        <action
             android:id="@+id/action_characterFragment_to_checkInFragment"
             app:destination="@id/checkInFragment" />
+        <action
+            android:id="@+id/action_characterFragment_to_TFragment"
+            app:destination="@id/TFragment" />
     </fragment>
     <fragment
         android:id="@+id/scoreFragment"
-        android:name="com.example.module_character.ui.two.ScoreFragment"
+        android:name="com.example.module_character.ui.feature.ScoreFragment"
         android:label="ScoreFragment">
         <action
             android:id="@+id/action_scoreFragment_to_answerFragment"
@@ -37,7 +37,7 @@
     </fragment>
     <fragment
         android:id="@+id/collectCharacterFragment"
-        android:name="com.example.module_character.ui.two.CollectCharacterFragment"
+        android:name="com.example.module_character.ui.feature.CollectCharacterFragment"
         android:label="CollectCharacterFragment" />
     <fragment
         android:id="@+id/answerFragment"
@@ -53,18 +53,26 @@
     </fragment>
     <fragment
         android:id="@+id/matchFragment"
-        android:name="com.example.module_character.ui.two.MatchFragment"
+        android:name="com.example.module_character.ui.feature.MatchFragment"
         android:label="MatchFragment" />
     <fragment
-        android:id="@+id/recommendFragment"
-        android:name="com.example.module_character.ui.RecommendFragment"
-        android:label="RecommendFragment" />
-    <fragment
         android:id="@+id/checkInFragment"
-        android:name="com.example.module_character.ui.two.CheckInFragment"
+        android:name="com.example.module_character.ui.feature.CheckInFragment"
         android:label="CheckInFragment" />
     <fragment
         android:id="@+id/enterViewFragment"
         android:name="com.example.module_character.ui.EnterViewFragment"
         android:label="EnterViewFragment" />
+    <fragment
+        android:id="@+id/TFragment"
+        android:name="com.example.module_character.ui.feature.TFragment"
+        android:label="TFragment" >
+        <action
+            android:id="@+id/action_TFragment_to_textDialogFragment"
+            app:destination="@id/textDialogFragment" />
+    </fragment>
+    <dialog
+        android:id="@+id/textDialogFragment"
+        android:name="com.example.module_character.ui.bottomdialog.TextDialogFragment"
+        android:label="TextDialogFragment" />
 </navigation>
