--- a/module_mine/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/module_mine/src/main/res/layout/fragment_bottom_sheet.xml
@@ -24,11 +24,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:textSize="16dp"
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
         android:gravity="start|center_vertical"
         android:paddingStart="16dp"
-        android:text="moreInfo"
+        android:text="more info"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView_more"
@@ -50,11 +48,9 @@
         android:layout_marginRight="48dp"
         android:layout_height="58dp"
         android:layout_marginStart="20dp"
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
         android:gravity="start|center_vertical"
         android:paddingStart="16dp"
-        android:text="changeBackGround"
+        android:text="change backhground"
         android:textColor="@color/black"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
