--- a/module_navigation/src/main/res/menu/menu_bottom.xml
+++ b/module_navigation/src/main/res/menu/menu_bottom.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/home_graph"
         android:icon="@drawable/ic_callligraph"
-        android:title="Mine"
+        android:title="Home"
         app:showAsAction="always" />
     <item
         android:id="@+id/community_graph"
